...
                .toList();
            return descriptions;
          },
        );
      } else {
        return TextField(
          key: const Key("descriptionField"),
          focusNode: _focus,
          controller: _controller,
          autocorrect: true,
          decoration: InputDecoration(
            hintText: L10N.of(context).tr.whatAreYouDoing,
          ),
...
