...
  @override
  Widget build(BuildContext context) {
    return BlocBuilder<ThemeBloc, ThemeState>(
        bloc: bloc,
        builder: (BuildContext context, ThemeState state) {
          return ListTile(
            key: const Key("themeOption"),
            title: Text(L10N.of(context).tr.theme),
            subtitle: Text(state.theme?.display(context) ?? ""),
            trailing: Icon(L10N.of(context).rtl
                ? FontAwesomeIcons.chevronLeft
                : FontAwesomeIcons.chevronRight),
            leading: const Icon(FontAwesomeIcons.palette),
...
                            value: ThemeType.light,
                            groupValue: state.theme,
                            onChanged: (ThemeType? type) =>
                                Navigator.pop(context, type),
                          ),
                          RadioListTile<ThemeType>(
                            key: const Key("themeDark"),
                            title: Text(L10N.of(context).tr.dark),
                            value: ThemeType.dark,
                            groupValue: state.theme,
                            onChanged: (ThemeType? type) =>
                                Navigator.pop(context, type),
                          ),
...
