...
    final double totalHours =
        projectHours.values.fold(0.0, (double sum, double v) => sum + v);

    return Padding(
      padding: const EdgeInsets.fromLTRB(16, 16, 16, 40),
      child: ListView(
        key: const Key("timeTable"),
        shrinkWrap: true,
        children: <Widget>[
          Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: <Widget>[
              Expanded(
...
